--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,19 @@
 			<version>2.8.7</version>
 		</dependency>
 
-  
+  	
+  		<!-- 점부파일 -->
+		<!-- common fileupload -->
+			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>1.3.3</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.4</version>
+			</dependency>
 
   
   </dependencies>
